--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -997,4 +997,10 @@ config SND_SOC_MSM_HDMI_CODEC_RX
 source "sound/soc/codecs/sdm660_cdc/Kconfig"
 source "sound/soc/codecs/msm_sdw/Kconfig"
 
+config NXP_TFA98xx
+        depends on I2C
+        tristate "NXP TFA98xx Support"
+        ---help---
+          The NXP TFA98xx chip is used as a  smart PA Controller.
+
 endmenu
